--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     <<: *defaults
     steps:
-      - checkout:
+      - checkout
       - run:
          - name: install npm
          - command: npm install
@@ -18,7 +18,7 @@ jobs:
   test:
     <<: *defaults
     steps:
-      - checkout:
+      - checkout
 
       - restore_cache:
           key: v1-{{arch}}-cache-{{ checksum "package.json"}}
