--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,15 @@ defaults: &defaults
   workingdrectory: ~/JP_Nodejs_project
   docker:
     - image: circleci/node:8
-version: 2.1
+version: 2
 jobs:
   build:
     <<: *defaults
     steps:
       - checkout
       - run:
-         - name: install npm
-         - command: npm install
+         - name: yarn install
+         - command: yarn
       - save_cache:
           key: v1-{{arch}}-cache-{{ checksum "package.json"}}
           paths:
@@ -27,11 +27,11 @@ jobs:
           - command: mkdir -p testresults/ava
       - run:
           - name: Run Test
-          - command: npm test | npx tap-xunit > test-results/ava/results.xml
+          - command: yarn test | npx tap-xunit > test-results/ava/results.xml
 
       - run:
           - name: Run cverage report
-          - command: npm coverage > coverage-report.lcov
+          - command: yarn coverage > coverage-report.lcov
       - store_artifacts:
           path: test-results/ava/results.xml
           destination: test-resuts/ava/
