--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,13 +45,14 @@ version: 2.0
 
 
     jobs:
-       build
-       test:
+      - build
+      - test:
           requires:
             - build
           filters:
             branches:
-              only: master
+              only:
+               - master
 
 
 
