--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ version: 2.0
     jobs
       - build
       - test
-          requires:
+          requires
             - build
           filters
             branches
