--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           -
             name: "npm install"
           -
-            command: npm
+            command: npm install
       -
         save_cache:
           key: "v1-{{arch}}-cache-{{ checksum \"package.json\"}}"
@@ -37,19 +37,19 @@ jobs:
           -
             name: "set up test output"
           -
-            command: "mkdir -p testresults/ava"
+            command: mkdir -p testresults/ava
       -
         run:
           -
             name: "Run Test"
           -
-            command: "npm test | npx tap-xunit > test-results/ava/results.xml"
+            command: npm test | npx tap-xunit > test-results/ava/results.xml
       -
         run:
           -
             name: "Run cverage report"
           -
-            command: "yarn coverage > coverage-report.lcov"
+            command: npm coverage > coverage-report.lcov
       -
         store_artifacts:
           destination: test-resuts/ava/
