--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,69 +1,68 @@
----
-defaults:
-  docker:
-    -
-      image: "circleci/node:8"
+defaults: &defaults
   workingdrectory: ~/JP_Nodejs_project
+  docker:
+    - image: cimg/node:17.3.0
+version: 2.1
 jobs:
   build:
-    docker:
-      -
-        image: "circleci/node:8"
+    <<: *defaults
     steps:
       - checkout
-      -
-        run:
-          -
-            name: "npm install"
-          -
-            command: npm install
-      -
-        save_cache:
-          key: "v1-{{arch}}-cache-{{ checksum \"package.json\"}}"
+      - run:
+          name: npm install
+          command: |
+              sudo yum install npm
+              ls -al
+              node --version
+              echo "hello world" 
+
+      - save_cache:
+          key: v1-{{arch}}-cache-{{ checksum "package.json"}}
           paths:
             - ./node_modules
-    workingdrectory: ~/JP_Nodejs_project
   test:
-    docker:
-      -
-        image: "circleci/node:8"
+    <<: *defaults
     steps:
       - checkout
-      -
-        restore_cache:
-          key: "v1-{{arch}}-cache-{{ checksum \"package.json\"}}"
-      -
-        run:
-          -
-            name: "set up test output"
-          -
-            command: mkdir -p testresults/ava
-      -
-        run:
-          -
-            name: "Run Test"
-          -
-            command: npm test | npx tap-xunit > test-results/ava/results.xml
-      -
-        run:
-          -
-            name: "Run cverage report"
-          -
-            command: npm coverage > coverage-report.lcov
-      -
-        store_artifacts:
-          destination: test-resuts/ava/
+
+      - restore_cache:
+          key: v1-{{arch}}-cache-{{ checksum "package.json"}}
+      - run:
+            name: set up test output
+            command: |
+               mkdir -p testresults/ava
+      - run:
+          name: Run Test
+          command: yarn test | npx tap-xunit > test-results/ava/results.xml
+
+      - run:
+          name: Run cverage report
+          command: npm coverage > coverage-report.lcov
+      - store_artifacts:
           path: test-results/ava/results.xml
-      -
-        store_artifacts:
-          destination: reports
+          destination: test-resuts/ava/
+      - store_artifacts:
           path: coverage-report.lcov
-      -
-        store_test_results:
-          path: "test results"
-    workingdrectory: ~/JP_Nodejs_project
-version: |-
-    2.1
-    
-    jobs - build - test requires - build filters branches only - master
-workflow: ~
+          destination: reports
+      - store_test_results:
+          path: test results
+workflow:
+ version: 2
+ build-test:
+
+
+    jobs:
+      - build:
+      - test:
+          requires:
+            - build
+          filters:
+            branches:
+              only: main
+
+
+
+
+
+
+
