--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,11 @@
 
 
 version: 2.1
+
+parameters:
+dependencies:
+
+
 orbs:
   node: circleci/node@4.1.0
 jobs:
@@ -19,45 +24,8 @@ jobs:
               node --version
               echo "hello world" 
 
-      - save_cache:
-          key: v1-{{arch}}-cache-{{ checksum "package.json"}}
-          paths:
-            - ./node_modules
-  test:
+      
 
-    docker:
-      - image: img/node:17.3.0
-
-
-
-
-    steps:
-      - checkout
-      - run:
-          name: install jest
-
-
-      - restore_cache:
-          key: v1-{{arch}}-cache-{{ checksum "package.json"}}
-      - run:
-            name: set up test output
-            command: |
-               mkdir -p testresults/ava
-      - run:
-          name: Run Test
-          command: npm test | npx tap-xunit > test-results/ava/results.xml
-
-      - run:
-          name: Run cverage report
-          command: npm coverage > coverage-report.lcov
-      - store_artifacts:
-          path: test-results/ava/results.xml
-          destination: test-resuts/ava/
-      - store_artifacts:
-          path: coverage-report.lcov
-          destination: reports
-      - store_test_results:
-          path: test results
 workflow:
  version: 2.1
  build-test:
@@ -69,7 +37,6 @@ workflow:
          filters:
            branches:
              only: main
-
 
 
 
