--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,10 @@ dependencies:
 
 orbs:
   node: circleci/node@4.1.0
+defaults: &defaults
+  working_directory: ~/project
+  docker:
+    - image: cimg/node:17.3.0
 jobs:
   build:
     docker:
@@ -27,18 +31,27 @@ jobs:
               ls -al
               node --version
               echo "hello world"
+      - save_cache:
+          key: v1-{{arch}}-cache-{{ checksum "package.json}}
+          paths:
+            - ./node_modules
   test:
-    docker:
-      - image: cimg/node:17.3.0
-    working_directory: ~/project
+    <<: *defaults
     steps:
       - checkout
+      - restore_cache:
+          key: v1-{{arch}}-cache-{{ checksum "package.json}
       - run:
-          name: npm test
-          command: |
-            npm run test
-            
-          
+          name: set up test output directory
+          command: | 
+            mkdir -p test -p testresults/ava
+      - run:
+          name: Run tests
+          command: npm run test
+
+
+
+
 
 
 workflow:
