--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "judrin",
+  "author": "judrin1965",
   "license": "ISC"
 }
